[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/scenes/3/DoorOpen.png" type="Texture" id=1]
[ext_resource path="res://assets/scenes/1/Background.png" type="Texture" id=2]
[ext_resource path="res://assets/scenes/3/StairsDown.png" type="Texture" id=3]
[ext_resource path="res://assets/scenes/1/DustOverlay.png" type="Texture" id=4]
[ext_resource path="res://assets/scenes/1/Floor.png" type="Texture" id=5]
[ext_resource path="res://Scripts/StairsDown1FB1.gd" type="Script" id=6]
[ext_resource path="res://assets/scenes/1/Door.png" type="Texture" id=7]
[ext_resource path="res://assets/scenes/1/Wall.png" type="Texture" id=9]
[ext_resource path="res://Scenes/Transition_Scene.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scripts/Control.gd" type="Script" id=12]

[sub_resource type="NavigationPolygon" id=1]
vertices = PoolVector2Array( 1415.33, 880.034, 1438.49, 1079.6, 394.361, 1079.6, 396.143, 872.907 )
polygons = [ PoolIntArray( 0, 1, 2, 3 ) ]
outlines = [ PoolVector2Array( 396.143, 872.907, 394.361, 1079.6, 1438.49, 1079.6, 1415.33, 880.034 ) ]

[node name="StairsDown1FB1" type="Node"]
script = ExtResource( 6 )

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rect_pivot_offset = Vector2( 954.44, 546.933 )
mouse_filter = 2
mouse_default_cursor_shape = 3
script = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area_Move" type="Control" parent="Control"]
anchor_left = 0.234
anchor_top = 0.893
anchor_right = 0.763
anchor_bottom = 1.001
margin_left = -48.28
margin_top = -103.44
margin_right = -256.96
margin_bottom = 147.92
rect_scale = Vector2( 1.28, 0.6 )
mouse_default_cursor_shape = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Environment" type="Node" parent="Control"]

[node name="Background" type="Sprite" parent="Control/Environment"]
z_index = -1
texture = ExtResource( 2 )
centered = false
flip_h = true
flip_v = true

[node name="Wall" type="Sprite" parent="Control/Environment"]
position = Vector2( -296.376, -1.88779 )
z_index = -1
texture = ExtResource( 9 )
centered = false

[node name="Wall2" type="Sprite" parent="Control/Environment"]
position = Vector2( 398.315, 3.77539 )
z_index = -1
texture = ExtResource( 9 )
centered = false
flip_h = true

[node name="Floor" type="Sprite" parent="Control/Environment"]
position = Vector2( 0, -941.249 )
scale = Vector2( 0.995094, 1.87328 )
z_index = -1
texture = ExtResource( 5 )
centered = false
flip_h = true

[node name="Door" type="Sprite" parent="Control/Environment"]
position = Vector2( 560.253, 625.894 )
texture = ExtResource( 7 )
flip_h = true

[node name="DoorOpen" type="Sprite" parent="Control/Environment"]
position = Vector2( 802.903, 433.855 )
texture = ExtResource( 1 )

[node name="Size1" type="ColorRect" parent="Control/Environment"]
margin_right = 400.0
margin_bottom = 1080.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Size2" type="ColorRect" parent="Control/Environment"]
margin_left = 1520.0
margin_right = 1920.0
margin_bottom = 1085.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StairsDown" type="Sprite" parent="Control/Environment"]
visible = false
position = Vector2( 1677.83, 861.63 )
scale = Vector2( 0.567874, 0.555402 )
texture = ExtResource( 3 )

[node name="Botoes" type="Node" parent="Control"]

[node name="Door" type="TextureButton" parent="Control/Botoes"]
margin_left = 747.0
margin_top = 281.0
margin_right = 1197.0
margin_bottom = 900.0
hint_tooltip = "Go back to corridor"
focus_mode = 1
mouse_default_cursor_shape = 2
enabled_focus_mode = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClosedDoor" type="TextureButton" parent="Control/Botoes"]
margin_left = 1352.11
margin_top = 500.551
margin_right = 1524.11
margin_bottom = 1076.55
mouse_default_cursor_shape = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StairsDown" type="TextureButton" parent="Control/Botoes"]
visible = false
margin_left = 1429.0
margin_top = 849.0
margin_right = 1923.0
margin_bottom = 1087.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation2D" type="Navigation2D" parent="Control"]
position = Vector2( 1.69409, -4.51978 )
z_index = -1
z_as_relative = false

[node name="NavigationPolygonInstance" type="NavigationPolygonInstance" parent="Control/Navigation2D"]
z_index = -1
z_as_relative = false
navpoly = SubResource( 1 )

[node name="Line2D" type="Line2D" parent="Control"]
position = Vector2( 1319.2, 1013.98 )
z_index = 5
points = PoolVector2Array( -334.925, -30.3178 )

[node name="DustOverlay" type="Sprite" parent="."]
position = Vector2( 958.415, 541.945 )
z_index = 2
texture = ExtResource( 4 )
flip_h = true

[node name="Transition_Scene" parent="." instance=ExtResource( 11 )]
[connection signal="pressed" from="Control/Botoes/Door" to="." method="_on_Door_pressed"]
[connection signal="pressed" from="Control/Botoes/ClosedDoor" to="." method="_on_ClosedDoor_pressed"]
[connection signal="pressed" from="Control/Botoes/StairsDown" to="." method="_on_StairsDown_pressed"]
[connection signal="transitioned" from="Transition_Scene" to="." method="_on_Transition_Scene_transitioned"]
